--- a/package.json
+++ b/package.json
@@ -22,16 +22,21 @@
     "react-native": "0.71.6",
     "react-native-background-timer": "^2.4.1",
     "react-native-calendars": "^1.1295.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-date-picker": "^4.2.13",
     "react-native-daterange-picker": "^1.5.1",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-element-dropdown": "^2.9.0",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-gifted-charts": "^1.2.42",
+    "react-native-modal": "^13.0.1",
     "react-native-paper": "^5.7.0",
     "react-native-reanimated": "^3.0.2",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
+    "react-native-select-dropdown": "^3.3.3",
     "react-native-stopwatch-timer": "^0.0.21",
+    "react-native-svg": "^13.9.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
